--- a/testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2a091">  <td>23/03/28 15:53:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findLogo()[pri:1, instance:com.testng.ParameterSample@15aab8c6]">findLogo</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/03/28 15:53:58</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.homePageLogin()[pri:2, instance:com.testng.ParameterSample@15aab8c6]">homePageLogin</td> 
-  <td>main@656479172</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>23/03/28 15:53:58</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParameterSample.tearDown()[pri:0, instance:com.testng.ParameterSample@15aab8c6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/03/29 22:37:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@68c72235]">login</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/03/29 22:37:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@68c72235]">login</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/03/29 22:37:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@68c72235]">login</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
 </table>
