--- a/testng/test-output/old/Suite Test/classes.html
+++ b/testng/test-output/old/Suite Test/classes.html
@@ -18,6 +18,10 @@
 <td>homePageLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>findPageTitle</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
