--- a/testng/test-output/old/Suite Test/methods.html
+++ b/testng/test-output/old/Suite Test/methods.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.homePageLogin()[pri:2, instance:com.testng.ParameterSample@50b5ac82]">homePageLogin</td> 
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findLogo()[pri:1, instance:com.testng.ParameterSample@50b5ac82]">findLogo</td> 
   <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:12</td>   <td>-6594</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParameterSample.setup(java.lang.String,java.lang.String)[pri:0, instance:com.testng.ParameterSample@50b5ac82]">&gt;&gt;setup</td> 
+<tr bgcolor="869769">  <td>23/04/08 11:05:25</td>   <td>-237</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParameterSample.setup(java.lang.String,java.lang.String)[pri:0, instance:com.testng.ParameterSample@50b5ac82]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:20</td>   <td>1851</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParameterSample.tearDown()[pri:0, instance:com.testng.ParameterSample@50b5ac82]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:18</td>   <td>-88</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findLogo()[pri:1, instance:com.testng.ParameterSample@50b5ac82]">findLogo</td> 
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.homePageLogin()[pri:2, instance:com.testng.ParameterSample@50b5ac82]">homePageLogin</td> 
   <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:21</td>   <td>2369</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParameterSample.setup(java.lang.String,java.lang.String)[pri:0, instance:com.testng.ParameterSample@7205765b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:27</td>   <td>8953</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParameterSample.tearDown()[pri:0, instance:com.testng.ParameterSample@7205765b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:26</td>   <td>7324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.homePageLogin()[pri:2, instance:com.testng.ParameterSample@7205765b]">homePageLogin</td> 
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParameterSample.tearDown()[pri:0, instance:com.testng.ParameterSample@50b5ac82]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findPageTitle()[pri:0, instance:com.testng.ParameterSample@50b5ac82]">findPageTitle</td> 
   <td>main@1514476350</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>23/03/28 15:54:26</td>   <td>7264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findLogo()[pri:1, instance:com.testng.ParameterSample@7205765b]">findLogo</td> 
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findPageTitle()[pri:0, instance:com.testng.ParameterSample@7205765b]">findPageTitle</td> 
+  <td>main@1514476350</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.homePageLogin()[pri:2, instance:com.testng.ParameterSample@7205765b]">homePageLogin</td> 
+  <td>main@1514476350</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ParameterSample.setup(java.lang.String,java.lang.String)[pri:0, instance:com.testng.ParameterSample@7205765b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1514476350</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>205</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ParameterSample.tearDown()[pri:0, instance:com.testng.ParameterSample@7205765b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:05:26</td>   <td>188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParameterSample.findLogo()[pri:1, instance:com.testng.ParameterSample@7205765b]">findLogo</td> 
   <td>main@1514476350</td>   <td></td> </tr>
 </table>
