--- a/testng/test-output/old/Suite/methods.html
+++ b/testng/test-output/old/Suite/methods.html
@@ -1,8 +1,80 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fedbd">  <td>23/03/28 15:29:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestingGroups.test3()[pri:0, instance:com.testng.TestingGroups@346d61be]">test3</td> 
-  <td>main@454104863</td>   <td></td> </tr>
-<tr bgcolor="9fedbd">  <td>23/03/28 15:29:53</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestingGroups.test4()[pri:0, instance:com.testng.TestingGroups@346d61be]">test4</td> 
-  <td>main@454104863</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/04/08 11:27:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionSample.findLogo()[pri:1, instance:com.testng.AssertionSample@383bfa16]">findLogo</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:27:02</td>   <td>857</td> <td>&nbsp;</td><td title="&lt;&lt;TestFour.afterRunningTestcase()[pri:0, instance:com.testng.TestFour@156b88f5]">&lt;&lt;afterRunningTestcase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/04/08 11:27:02</td>   <td>854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@4d465b11]">login</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:27:02</td>   <td>939</td> <td title="&lt;&lt;TestFour.lastCall()[pri:0, instance:com.testng.TestFour@156b88f5]">&lt;&lt;lastCall</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-9005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestThree.logout()[pri:0, instance:com.testng.TestThree@fba92d3]">logout</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestThree.lastMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&lt;&lt;lastMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/04/08 11:27:02</td>   <td>854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@4d465b11]">login</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestThree.firstMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&gt;&gt;firstMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/04/08 11:26:52</td>   <td>-9027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTwo.logout()[pri:3, instance:com.testng.TestTwo@29d89d5d]">logout</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/04/08 11:26:52</td>   <td>-8829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AssertionSample.setup()[pri:0, instance:com.testng.AssertionSample@383bfa16]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestThree.profile()[pri:0, instance:com.testng.TestThree@fba92d3]">profile</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/04/08 11:26:52</td>   <td>-9106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOne.close()[pri:0, instance:com.testng.TestOne@6631f5ca]">close</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>23/04/08 11:27:02</td>   <td>854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleDataProvider.login(java.lang.String,java.lang.String)[pri:0, instance:com.testng.SampleDataProvider@4d465b11]">login</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestThree.firstMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&gt;&gt;firstMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/04/08 11:27:01</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionSample.findPageTitle()[pri:0, instance:com.testng.AssertionSample@383bfa16]">findPageTitle</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestThree.signup()[pri:0, instance:com.testng.TestThree@fba92d3]">signup</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/04/08 11:26:52</td>   <td>-8869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFive.road()[pri:0, instance:com.testng.TestFive@71def8f8]">road</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestThree.signin()[pri:0, instance:com.testng.TestThree@fba92d3]">signin</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/04/08 11:26:52</td>   <td>-8857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFive.car()[pri:0, instance:com.testng.TestFive@71def8f8]">car</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestThree.lastMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&lt;&lt;lastMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-9011</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestThree.fisrtClassCall()[pri:0, instance:com.testng.TestThree@fba92d3]">&gt;&gt;fisrtClassCall</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/04/08 11:26:52</td>   <td>-9085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOne.login()[pri:0, instance:com.testng.TestOne@6631f5ca]">login</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:26:52</td>   <td>-8895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFour.settings()[pri:0, instance:com.testng.TestFour@156b88f5]">settings</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/04/08 11:27:01</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionSample.homePageLogin()[pri:2, instance:com.testng.AssertionSample@383bfa16]">homePageLogin</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:26:52</td>   <td>-9160</td> <td>&nbsp;</td><td title="&gt;&gt;TestFour.beforeRunningTestcase()[pri:0, instance:com.testng.TestFour@156b88f5]">&gt;&gt;beforeRunningTestcase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8903</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestThree.lastClassCall()[pri:0, instance:com.testng.TestThree@fba92d3]">&lt;&lt;lastClassCall</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:26:52</td>   <td>-8900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFour.gettingUrl()[pri:0, instance:com.testng.TestFour@156b88f5]">gettingUrl</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/04/08 11:26:52</td>   <td>-8839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFive.customer()[pri:0, instance:com.testng.TestFive@71def8f8]">customer</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/04/08 11:26:52</td>   <td>-9057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTwo.login()[pri:1, instance:com.testng.TestTwo@29d89d5d]">login</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>23/04/08 11:26:52</td>   <td>-8883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFive.government()[pri:0, instance:com.testng.TestFive@71def8f8]">government</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestThree.lastMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&lt;&lt;lastMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="e2a091">  <td>23/04/08 11:26:52</td>   <td>-9077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOne.setup()[pri:0, instance:com.testng.TestOne@6631f5ca]">setup</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>23/04/08 11:26:52</td>   <td>-9174</td> <td title="&gt;&gt;TestFour.firstCall()[pri:0, instance:com.testng.TestFour@156b88f5]">&gt;&gt;firstCall</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>23/04/08 11:27:01</td>   <td>306</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AssertionSample.tearDown()[pri:0, instance:com.testng.AssertionSample@383bfa16]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestThree.firstMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&gt;&gt;firstMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestThree.lastMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&lt;&lt;lastMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="869769">  <td>23/04/08 11:26:52</td>   <td>-8925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestThree.firstMethod()[pri:0, instance:com.testng.TestThree@fba92d3]">&gt;&gt;firstMethod</td> 
+<td>&nbsp;</td>  <td>main@1325056130</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>23/04/08 11:26:52</td>   <td>-9039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTwo.showDetails()[pri:2, instance:com.testng.TestTwo@29d89d5d]">showDetails</td> 
+  <td>main@1325056130</td>   <td></td> </tr>
 </table>
